--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,24 +4,13 @@
 # links. Removing a link prevents it from showing in the header, but does not
 # prevent it from being included in the site.
 
+# main links
 main:
+  - title: "Education"
+    url: /#education
   - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+    url: /#publications
+  - title: "Research"
+    url: /#research
   - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+    url: /files/CV_Qilin_Huang.pdf
